# ROBOTIS-OP3

./: .gitignore  .robotis_op3.rosinstall  .robotis_op3_.rosinstall  .travis.yml  LICENSE  README.md
ROBOTIS-OP3-Common/robotis_op3_description/: CMakeLists.txt  package.xml
ROBOTIS-OP3-Demo/ball_detector/: CMakeLists.txt  package.xml
ROBOTIS-OP3-Demo/ball_tracker/: CMakeLists.txt  package.xml  soccer_demo.cpp  soccer_demo.h
ROBOTIS-OP3-Demo/face_detection/: CMakeLists.txt  LICENSE.txt  README.md  package.xml
ROBOTIS-OP3-Demo/op3_demo/: CMakeLists.txt  package.xml
ROBOTIS-OP3-Demo/robotis_op3_demo/: CMakeLists.txt  package.xml
ROBOTIS-OP3-Demo/sound_play/: CMakeLists.txt  package.xml
ROBOTIS-OP3-Hardware/Skin/: ROBOTIS-OP3_cvr_arm_l_prt.stp  ROBOTIS-OP3_cvr_body_f_prt.stp  ROBOTIS-OP3_cvr_head_f_prt.stp  ROBOTIS-OP3_cvr_tibia_prt.stp
ROBOTIS-OP3-Modules/cm_740_module/: CMakeLists.txt  package.xml
ROBOTIS-OP3-Modules/op3_action_module/: CMakeLists.txt  package.xml
ROBOTIS-OP3-Modules/op3_base_module/: CMakeLists.txt  package.xml
ROBOTIS-OP3-Modules/op3_head_control_module/: CMakeLists.txt  package.xml
ROBOTIS-OP3-Modules/op3_io_module/: CMakeLists.txt  package.xml
ROBOTIS-OP3-Modules/op3_walking_module/: CMakeLists.txt  package.xml
cm_740_module/: CHANGELOG.rst  CMakeLists.txt  package.xml
cm_740_module/include/cm_740_module/: cm_740_module.h
cm_740_module/src/: cm_740_module.cpp
op2_action_module/: CMakeLists.txt  package.xml
op2_base_module/: CMakeLists.txt  package.xml
op2_base_module/include/op2_base_module/: BaseModule.h  RobotisState.h
op2_base_module/src/: BaseModule.cpp  RobotisState.cpp
op2_demo/: CMakeLists.txt  CMakeLists.txt.user.2b02d60  package.xml
op2_head_control_module/: CMakeLists.txt  package.xml
op2_kinematics_dynamics/: CMakeLists.txt  package.xml
op2_manager/: CMakeLists.txt  package.xml
op2_manager/config/: dxl_init.yaml  dxl_init_OP2.yaml
op2_manager/launch/: op3_manager.launch
op2_manager/src/: op2_manager.cpp
op3_action_module/: CHANGELOG.rst  CMakeLists.txt  package.xml
op3_action_module/include/op3_action_module/: action_file_define.h  action_module.h
op3_action_module/src/: ActionModule.cpp  action_module.cpp
op3_balance_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
op3_balance_control/include/op3_balance_control/: op3_balance_control.h
op3_balance_control/src/: op3_balance_control.cpp
op3_base_module/: CHANGELOG.rst  CMakeLists.txt  package.xml
op3_base_module/data/: ft_data.yaml  ini_pose.yaml
op3_base_module/include/op3_base_module/: BaseModule.h  base_module.h  base_module_state.h
op3_base_module/src/: BaseModule.cpp  RobotisState.cpp  base_module.cpp  base_module_state.cpp
op3_direct_control_module/: CHANGELOG.rst  CMakeLists.txt  package.xml
op3_direct_control_module/include/op3_direct_control_module/: direct_control_module.h
op3_direct_control_module/src/: direct_control_module.cpp
op3_head_control_module/: CHANGELOG.rst  CMakeLists.txt  package.xml
op3_head_control_module/include/op3_head_control_module/: head_control_module.h
op3_head_control_module/src/: head_control_module.cpp
op3_joint_trajectory_control_module/: CMakeLists.txt  package.xml
op3_joint_trajectory_control_module/include/op3_joint_trajectory_control_module/: joint_trajectory_control_module.h
op3_joint_trajectory_control_module/src/: joint_trajectory_control_module.cpp
op3_kinematics_dynamics/: CHANGELOG.rst  CMakeLists.txt  package.xml
op3_kinematics_dynamics/include/op3_kinematics_dynamics/: OP3KinematicsDynamics.h  OP3KinematicsDynamicsDefine.h  link_data.h  op3_kinematics_dynamics.h  op3_kinematics_dynamics_define.h
op3_kinematics_dynamics/src/: LinkData.cpp  OP3KinematicsDynamics.cpp  link_data.cpp  op3_kinematics_dynamics.cpp
op3_localization/: CHANGELOG.rst  CMakeLists.txt  package.xml
op3_localization/include/op3_localization/: op3_localization.h
op3_localization/src/: main.cpp  op3_localization.cpp
op3_manager/: CHANGELOG.rst  CMakeLists.txt  package.xml
op3_manager/config/: OP2.robot  OP3.robot  OP3_SENSOR.robot  dxl_init.yaml  dxl_init_OP2.yaml  dxl_init_OP3.yaml  dxl_init_Thormang3.yaml  ft_calibration_data.yaml  ft_data.yaml  offset.yaml
op3_manager/launch/: op2_manager.launch  op3_gazebo.launch  op3_gazebo.launch.py  op3_manager.launch  op3_manager.launch.py  op3_test_manager.launch
op3_manager/src/: op3_manager.cpp  test_manager.cpp
op3_online_walking_module/: CHANGELOG.rst  CMakeLists.txt  package.xml
op3_online_walking_module/config/: balance_gain.yaml  joint_feedback_gain.yaml  joint_feedforward_gain.yaml  walking_parm.yaml
op3_online_walking_module/include/op3_online_walking_module/: joint_control.h  online_walking_module.h  op3_kdl.h  walking_control.h  wholebody_control.h
op3_online_walking_module/src/: joint_control.cpp  online_walking_module.cpp  op3_kdl.cpp  walking_control.cpp  wholebody_control.cpp
op3_optimization/: CMakeLists.txt  package.xml
op3_optimization/src/: op3_optimization.cpp
op3_sensors/: CMakeLists.txt  package.xml
op3_status_check_module/: CMakeLists.txt  package.xml
op3_status_check_module/include/op3_status_check_module/: status_check_module.h
op3_status_check_module/src/: status_check_module.cpp
op3_tune_module/: CMakeLists.txt  package.xml
op3_tuning_module/: CMakeLists.txt  package.xml
op3_tuning_module/data/: offset.yaml  tune_pose.yaml
op3_tuning_module/include/op3_tuning_module/: tuning_data.h  tuning_module.h  tuning_module_state.h
op3_tuning_module/src/: tuning_data.cpp  tuning_module.cpp  tuning_module_state.cpp
op3_walking_module/: CHANGELOG.rst  CMakeLists.txt  package.xml
op3_walking_module/config/: param.yaml
op3_walking_module/include/op3_walking_module/: op3_walking_module.h  op3_walking_parameter.h
op3_walking_module/src/: op3_walking_module.cpp
op3_wholebody_module/: CMakeLists.txt  package.xml
op3_wholebody_module_msgs/: CMakeLists.txt  package.xml
open_cr_module/: CHANGELOG.rst  CMakeLists.txt  package.xml
robotis_op3/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+294 files in other folders)
