<?xml version="1.0"?>
<package>
  <name>op2_manager</name>
  <version>0.1.0</version>
  <description>The op2_manager package</description>

  <maintainer email="zerom@robotis.com">ROBOTIS</maintainer>

  <license>GPLv2</license>

  <!-- <url type="website">http://wiki.ros.org/thormang3_manager</url> -->

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>robotis_framework_common</build_depend>
  <build_depend>robotis_device</build_depend>
  <build_depend>robotis_controller</build_depend>
  <build_depend>robotis_controller_msgs</build_depend>
  <build_depend>op2_kinematics_dynamics</build_depend>
  <build_depend>op2_base_module</build_depend>
  <build_depend>op2_head_control_module</build_depend>
  <build_depend>op2_action_module</build_depend>
  
  <build_depend>cmake_modules</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>robotis_controller</run_depend>

</package>
