<?xml version="1.0"?>
<package>
  <name>op3_balance_control</name>
  <version>0.0.0</version>
  <description>The op3_balance_control package</description>
  <license>Apache License 2.0</license>
  <author email="sch@robotis.com">SCH</author>
  <maintainer email="sch@robotis.com">SCH</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>robotis_math</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>robotis_math</run_depend>
</package>
