<?xml version="1.0"?>
<package>
  <name>op3_head_control_module</name>
  <version>0.1.0</version>
  <description>The op3_head_control_module package</description>
  <license>Apache License 2.0</license>
  <author email="kmjung@robotis.com">Kayman</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3</url>
  <url type="website">http://wiki.ros.org/robotis_op3</url>
  <buildtool_depend>catkin</buildtool_depend>  
  <build_depend>robotis_device</build_depend>
  <build_depend>robotis_math</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>dynamixel_sdk</build_depend>  
  <run_depend>robotis_device</run_depend>
  <run_depend>robotis_math</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>dynamixel_sdk</run_depend>
</package>
